1. fixed shadow on menu bar title. 2. hopefully fixed touch scrolling on iOS.

--- a/css/map.css
+++ b/css/map.css
@@ -552,6 +552,7 @@ HEADER {
     width: 100%;
     margin: 0 auto;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.12);
+    position: relative;
 }
 
 .menuHeader li {
@@ -627,7 +628,8 @@ hr {
 
 .tabs {
     direction: rtl;
-    overflow-y: auto;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
 }
 
 .listContainer {
